# monkey_interpreter

./: .clangd  .gitignore  README.md  go.mod  go.sum  main.go
.github/workflows/: main.yaml
ast/: ast.go  ast_test.go
code/: code.go  code_test.go
compiler/: compiler.go  compiler_test.go  symbol_table.go  symbol_table_test.go
evaluator/: evaluator.go  evaluator_test.go
lexer/: lexer.go  lexer_test.go
object/: builtins.go  environment.go  object.go
parser/: parser.go  parser_test.go
repl/: repl.go
samples/: fibonacci.monkey  fibonacci_nice.monkey  simple.monkey
token/: token.go
transpiler/: transpiler.go  transpiler_test.go
transpiler/runtime/: CMakeLists.txt  main.cpp
transpiler/runtime/include/: array.h  box.h  builtins.h  callable.h  fatal.h  fn_args.h  function.h  function_impl.h  hash_map.h  object.h  object_impl.h  object_type.h  rc.h  runtime.h  var_args.h  vec.h
transpiler/runtime/src/: array.cpp  fn_args.cpp  function.cpp  hash_map.cpp  object.cpp  var_args.cpp
transpiler/runtime/templates/: array_literal_expr.cpp  block_statement.cpp  bool_literal_expr.cpp  call_expr.cpp  expression_statement.cpp  fn_literal_expr.cpp  identifier_expression.cpp  if_expr.cpp  index_operator_expr.cpp  infix_expr.cpp  integer_literal_expr.cpp  let_statement.cpp  map_literal_expr.cpp  prefix_expr.cpp  program.cpp  range_expr.cpp  return_statement.cpp  string_literal_expr.cpp  var_args_literal_expr.cpp
transpiler/runtime/test/: box_test.cpp  rc_test.cpp  vec_test.cpp
vm/: frame.go  vm.go  vm_test.go
